# shelf-watcher

./: .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_CONTEXT.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
src/: app.py
src/components/: __init__.py  analytics.py  receipt_form.py  receipt_history.py
src/database/: __init__.py  connection.py
src/database/crud/: __init__.py  category.py  item.py  receipt.py  store.py
src/database/models/: __init__.py  category.py  item.py  receipt.py  store.py
src/pages/: 1_Add_Receipt.py  1_receipt_entry.py  2_View_Receipts.py  2_receipt_history.py  3_analytics.py
src/utils/: __init__.py  calculations.py  queries.py  validators.py
tests/: conftest.py  test_connection.py
tests/test_components/: test_receipt_form.py
tests/test_crud/: __init__.py  test_category.py  test_item.py  test_receipt.py  test_store.py
tests/test_models/: test_category.py  test_item.py  test_receipt.py  test_store.py
tests/test_utils/: test_calculations.py  test_queries.py  test_validators.py
